--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,8 +1,9 @@
 <div class="container mt-3">
     <a href="/profile">Back to profile</a> 
-    <button type="button" class="btn btn-light" id="seeCart" name="{{this.cart}}">Go to Cart</button>
+    
 
-    <h3 class="mt-3"> Welcome <span class="fw-bold">{{user.first_name}}!</span>  {{#if user.admin}} <span style="color: green">(admin)</span> {{else}} <span style="color: blue"> (user)</span>{{/if}}</h3>
+    <h3 class="mt-3"> Welcome <span class="fw-bold">{{user.first_name}}!</span>  {{#if user.admin}} <span style="color: green">(admin)</span> {{else}} <span style="color: blue"> (user)</span> <button type="button" class="btn btn-secondary" id="seeCart" name="{{this.cart}}">Go to Cart</button>{{/if}}</h3>
+
     {{#if user.admin}}
     
     <div class="mt-4 mb-3">
@@ -47,28 +48,39 @@
         <ul class="list-group">
         {{#each renderProducts}}
             <li class="list-group-item d-flex mb-3">
-                <div>{{this.productId.title}} - {{this.description}} - ${{this.price}} - stock: {{this.stock}}</div> <button type="button" id="{{this.id}}" class="btn btn-outline-success btn-sm ms-auto p-2">Delete product</button>
+                <div>{{this.title}} - {{this.description}} - ${{this.price}} - stock: {{this.stock}} | owner: {{this.owner}}</div> <button type="button" id="{{this.id}}" class="btn btn-outline-success btn-sm ms-auto p-2">Delete product</button>
             </li>
-        {{/each}}
-        <a href=`"http://localhost:8080/products{{prevLink}}"`>Prev Link</a> 
-        <h4>{{page}}</h4> 
-        <a href="http://localhost:8080/products{{nextLink}}">Next Link</a> 
-       
+        {{/each}}       
     </div>
+        {{#if hasPrevPage}}
+        <a href={{prevLink}}>Prev Link</a> 
+         {{/if}}
+        <h4>{{page}}</h4>
+        {{#if hasNextPage}} 
+        <a href={{nextLink}}>Next Link</a> 
+        {{/if}}
     {{else}}
     <h4>These are our products. </h4>
     <div class="mt-4" id="{{this.cart}}">
         <ul class="list-group" id="userProductList">
         {{#each renderProducts}}
-            <li class="list-group-item d-flex mb-3">
-                <div>{{this.productId.title}} - {{this.description}} - ${{this.price}} - stock: {{this.stock}}</div> <button type="button" id="{{this.id}}" name="{{cart}}" class="btn btn-outline-success btn-sm ms-auto p-2">Add to cart</button>
+            <li class="list-group-item d-flex mb-3 ">
+                <div>{{this.title}} - {{this.description}} - ${{this.price}} - stock: {{this.stock}}</div> 
+                {{#if this.userIsOwner}}
+                <div class="alert-primary btn-sm ms-auto p-2 " role="alert"> You own this</div>
+                {{else}}
+                <button type="button" id="{{this.this.id}}" name="{{this.cart}}" class="btn btn-outline-success btn-sm ms-auto p-2"> Add to cart</button>
+                {{/if}}
             </li>
         {{/each}}
         </ul>
     </div>
-    <a href=`"http://localhost:8080/products{{prevLink}}"`>Prev Link</a> 
-    <h4>{{page}}</h4> 
-    <a href="http://localhost:8080/products{{nextLink}}">Next Link</a> 
-
+    {{#if hasPrevPage}}
+    <a href={{prevLink}}>Prev Link</a> 
+    {{/if}}
+    <h4>{{page}}</h4>
+    {{#if hasNextPage}} 
+    <a href={{nextLink}}>Next Link</a> 
     {{/if}}
 </div>
+{{/if}}
