added delete inactive users btn

--- a/src/views/users.handlebars
+++ b/src/views/users.handlebars
@@ -28,7 +28,7 @@
       <td><button type="button" name="{{_id}}" class="btn btn-danger" onclick="deleteUser(this.name)">DELETE</button></td>
     </tr>
     {{/each}}
-    
   </tbody>
 </table>
+<button type="button" id="deleteInactiveUsers" class="btn btn-danger">DELETE INACTIVE USERS</button>
 </div>
